# STRobotics

./: .gitignore
src/argo_eyes/: package.xml  setup.cfg  setup.py
src/argo_eyes/argo_eyes/: config_loader.py  eyes_node.py  models.py  renderer.py  renderer_real.py
src/argo_eyes/argo_eyes/drivers/: oled_luma.py  pca9548a.py
src/argo_eyes/config/: eyes.yaml
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: system.launch.xml
src/display/: package.xml  setup.py
src/display/display/: DisplayNode.py
src/gpio_utils/: package.xml  setup.py
src/gpio_utils/gpio_utils/: GpioController.py
src/interface/: CMakeLists.txt  package.xml
src/interface/srv/: Environment.srv  GpioMode.srv  GpioPulse.srv  GpioSet.srv  ServComm.srv  Servo.srv  SetServo.srv
src/robot_head/: package.xml  setup.py
src/robot_head/launch/: robot_head.launch.py
src/robot_head/robot_head/: eyes_node.py  head_orchestrator.py  speak_node.py  temp_node.py  vision_node.py  voice_node.py  voice_node_bku.py
src/robot_head_eyes/: package.xml  setup.cfg  setup.py
src/robot_head_eyes/robot_head_eyes/: eyes_node.py
src/speak/: package.xml  setup.py
src/speak/speak/: speak_node.py
src/vision/: package.xml  setup.py
src/vision/faces_db/: db_mean.npz
src/vision/vision/: face_identify_node.py
src/voice/: package.xml  setup.py
src/voice/voice/: recognize.py
