<?xml version="1.0"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.1</version>
  <description>Bringup launch files for ARGO</description>
  <maintainer email="alpha@todo.todo">alpha</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Dipendenze “orchestrate” (opzionali ma consigliate) -->
  <exec_depend>argo_eyes</exec_depend>
  <!-- <exec_depend>gpio_utils</exec_depend> -->
  <!-- <exec_depend>display</exec_depend> -->
  <!-- <exec_depend>vision</exec_depend> -->

</package>

